--- a/app/scss/_info.scss
+++ b/app/scss/_info.scss
@@ -13,12 +13,12 @@
     } 
 
     .image-1 {
-        background: url(/images/image-about-dark.jpg) center center no-repeat;
+        background: url(../images/image-about-dark.jpg) center center no-repeat;
         background-size: cover;
     }
 
     .image-2 {
-        background: url(/images/image-about-light.jpg) center center no-repeat;
+        background: url(../images/image-about-light.jpg) center center no-repeat;
         background-size: cover;
     }
 
