just for comparing design

--- a/app/scss/util/_globals.scss
+++ b/app/scss/util/_globals.scss
@@ -76,7 +76,7 @@ button {
     max-width: 144rem;
     max-height: 80rem;
     // min-height: 100vh;
-    margin: auto;
+    margin: 0 auto;
     display: grid;
     grid-template-rows: 267fr 133fr;
     overflow: hidden;
